# FruitFlyPheno

./: .gitignore  README.md  degree_day_equations.py  environment.yml  fruitflyphenoenvlinux.yml  helper_functions.py  main.py  map.html  merged_index.json  merged_index_t.json  net_cdf_functions.py  processing_functions.py  pyproject.toml  recent_Weather_test.ipynb  ref.json  repro_example.ipynb  test.ipynb  visualization_functions.py
archive/: fflies_helpers.py  net_cdf_functions.py  processing_functions - Copy.py  processing_functions.py  repro_example.ipynb  spatial_variation.ipynb  visualization_functions.py
config/: fly_models.json  sample_user_input.json  settings.yaml
fflies/: __init__.py  main.py
figures/: la_threshold_reached_days_2.html
mathias_dates/: ff_detections_number_generations_processed.csv  ff_detections_number_generations_processed_2_7.csv  filtered_detections.csv  trapdates_testing.ipynb
notebooks/: custom_errors.py  fflies_helpers.py  inputs.py  interactive_plot.html  model1_vs_2_comparison - Copy.ipynb  model1_vs_2_comparison.ipynb  outputs.py  process_and_plot_dev.ipynb  recent_Weather_test.ipynb  repro_example.ipynb  simulations.py  spatial_variation.ipynb  temporal_variation.ipynb  thredds_test.ipynb  virtualizarr.ipynb  zarrtest.ipynb
scripts/: main.py
src/: __init__.py
tests/: thredds_test.ipynb  xp_test2.py  xpublish_test.py  zarrtest.ipynb
utils/: __init__.py  applied_functions.py  degree_day_equations.py  inputs.py  net_cdf_functions.py  outputs.py  processing_functions - Copy.py  processing_functions.py  simulations.py
(+29 files in other folders)
